Fix polaroid borders on small screens

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -122,14 +122,13 @@ header {
 
 .collage {
     .polaroid {
-        // margin: 30px 0;
-        padding: 30px;
+        padding: 2vw;
         background-color: $white;
         max-width: 600px;
         box-shadow: -3px 5px 10px $black;
 
         img {
-            margin-bottom: 30px;
+            margin-bottom: 2vw;
         }
 
         h4 {
